Smartlists: Project custom SQL fields now work as a field, requirement, and both